[package]
name = "zstacker"
version = "0.0.1-dev"
edition = "2024"
authors = ["David Kleingeld"]
description = "TI Z-Stack API"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["Zigbee", "Z-Stack", "Texas-Instruments"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
serialport = "4.2.2"
