[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["David Kleingeld"]

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.dependencies]
tokio = { version = "1.44", features = ["io-util", "sync", "rt", "time"] }
tokio-serial = "5.4.5"
