[package]
name = "zstacker-znp"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
zstacker-znp-protocol = { path = "../znp-protocol/" }
thiserror = "2.0.12"
tokio = { version = "1.44", features = ["io-util"] }
tracing = "0.1.41"
itertools = "0.14.0"

[dev-dependencies]
color-eyre = "0.6.3"
serialport = "4.2.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
