[package]
name = "zstacker-znp"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
zstacker-znp-protocol = { path = "../znp-protocol/" }
zstacker-test-support = { path = "../test-support/" }
thiserror = "2.0.12"
tokio.workspace = true
tracing = "0.1.41"
itertools = "0.14.0"
tokio-serial.workspace = true
futures-concurrency = "7.6.3"
futures = "0.3.31"
tokio-util = { version = "0.7.14", features = ["time"] }

[dev-dependencies]
zstacker-znp-protocol = { path = "../znp-protocol/", features = ["mocking"] }
color-eyre = "0.6.3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
