[package]
name = "zstacker-test-support"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
zstacker-znp-protocol = { path = "../znp-protocol/", features = ["mocking"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-serial.workspace = true
